Properly find endwhile, reuse foreach code. Solves a problem when running TopologicalSort.cmake.

BUG: 289522